fix(admin-theme): button contrast regular and dark mode

--- a/web/themes/custom/ys_admin_theme/scss/gin-color-overrides.scss
+++ b/web/themes/custom/ys_admin_theme/scss/gin-color-overrides.scss
@@ -8,10 +8,10 @@
   --darkest-gray: #1f1f1f;
 
   [data-gin-accent] {
-    --gin-color-button-text: var(--darkest-gray);
-    --gin-color-button-text-hover: var(--darkest-gray);
+    --gin-color-button-text: var(--wool);
+    --gin-color-button-text-hover: var(--wool);
   }
-  
+
   [data-gin-accent="light_blue"] {
     --gin-color-primary-rgb: 55, 108, 116;
     --gin-color-primary-active: var(--peacock-green);
@@ -24,6 +24,11 @@
     --colorGinText: var(--darkest-gray);
     --gin-border-color-table-header: var(--darkest-gray);
   }
+}
+
+.gin--dark-mode [data-gin-accent] {
+  --gin-color-button-text: var(--darkest-gray);
+  --gin-color-button-text-hover: var(--darkest-gray);
 }
 
 .gin--dark-mode [data-gin-accent="light_blue"] {
